--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,14 @@
-body {
-  margin: 0;
+body,html {
+  margin: 0;  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+}
+html, body, #root, .app {
+  height: 100%;
 }
 
 code {
