--- a/client/src/components/mainScreen.css
+++ b/client/src/components/mainScreen.css
@@ -1,8 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  background-color: #e6e6e6
-  ;
+  background-color: white;
   height: 100%;
   width: 100%;
 }
@@ -12,24 +11,6 @@
   width: 100%;
   height: 10%;
   background-color: #1976d2;
-}
-.logo {
-  display: flex;
-  width: 10%;
-  /* background-color: red; */
-  justify-content: center;
-  align-items: center;
-  color: white;
-}
-.name {
-  display: flex;
-  width: 80%;
-  /* background-color: green; */
-  justify-content: center;
-  align-items: center;
-  font-size: xx-large;
-  font-weight: bold;
-  color: white;
 }
 
 .mainDiv {
@@ -61,13 +42,13 @@
 .card {
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color: #F5F5F5;
   height: 80%;
   width: 45%;
   margin-left: 2.5rem;
   margin-right: 2.5rem;
   border-radius: 5px;
-  box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.6);
-  -webkit-box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.6);
+  box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.6);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.6);
 }
