--- a/client/src/components/student/screens/css/UniversityComp.css
+++ b/client/src/components/student/screens/css/UniversityComp.css
@@ -13,9 +13,8 @@
   height: auto;
   display: flex;
   flex-direction: column;
-  border: solid 3px  #FFBCBC;
+  border: solid 3px #ffbcbc;
   border-radius: 10px;
-
 }
 .uniHead {
   display: flex;
@@ -50,7 +49,6 @@
   width: 100%;
   height: 3rem;
   border-top: solid black 1px;
-
 }
 .uniNames {
   width: 50%;
@@ -77,4 +75,10 @@
   /* background-color: aqua; */
   justify-content: center;
   align-items: center;
+}
+.noRequest {
+  display: flex;
+  justify-content: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
