--- a/client/src/components/teacher/screens/css/ProfileCompt.css
+++ b/client/src/components/teacher/screens/css/ProfileCompt.css
@@ -11,10 +11,10 @@
     display: flex;
     flex-direction: row;
     background-color: white;
-    height: 20rem;
+    height: 15rem;
     width: 30rem;
     border-radius: 10px;
-    border: solid 3px  #FFBCBC;
+    border: solid 3px  #31A34A;
 }
 .profileDiv{
     display: flex;
@@ -33,6 +33,7 @@
     padding-left: 2rem;
     /* background-color: blue; */
     margin-top: 1rem;
+    margin-bottom: 0.5rem;
     width: 100%;
     height: 15%;
 }
