--- a/client/src/components/student/screens/css/StudentProfile.css
+++ b/client/src/components/student/screens/css/StudentProfile.css
@@ -1,4 +1,4 @@
-.profileMain{
+.profileMains{
     display: flex;
     flex-direction: column;
     /* background-color: white; */
@@ -7,16 +7,16 @@
     justify-content: center;
     align-items: center;
 }
-.profileCard{
+.profileCards{
     display: flex;
     flex-direction: row;
     background-color: white;
-    height: 25rem;
+    height: 20rem;
     width: 30rem;
     border-radius: 10px;
     border: solid 3px  #FFBCBC;
 }
-.profileDiv{
+.profileDivs{
     display: flex;
     flex-direction: column;
     /* background-color:#FFBCBC; */
@@ -26,7 +26,7 @@
     /* color: white; */
 }
 
-.profileTitle{
+.profileTitles{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,10 +36,10 @@
     width: 100%;
     height: 15%;
 }
-.proifleKey{
+.proifleKeys{
 
 }
-.profileVal{
+.profileVals{
     display: flex;
     font-weight: bold;
     font-size: 1.2rem;    
@@ -47,7 +47,7 @@
 
 
 
-.profileEdit{
+.profileEdits{
     display: flex;
     /* background-color: antiquewhite; */
     margin-top: 0.5rem;
@@ -56,19 +56,19 @@
     justify-content: flex-end;
     align-items: center;
 }
-.editBtn{
+.editBtns{
     height: 80%;
     width: 5rem;
     background-color: white;
 }
 @media only screen and (max-width: 600px) {
-    .profileMain{
+    .profileMains{
         width: 100%;
     }
-    .profileCard{
+    .profileCards{
         width: 20rem;
     }
-    .profileEdit{
+    .profileEdits{
 
     }
     .editBtn{
