student uni update done

--- a/client/src/components/teacher/screens/css/StudentUniListScreen.css
+++ b/client/src/components/teacher/screens/css/StudentUniListScreen.css
@@ -18,19 +18,20 @@
 }
 .uniCard{
     background-color: #F9F9F9;
-    width: 50%;
-    height: 8rem;
+    width: 45%;
+    height: 7rem;
     display: flex;
     padding: 1rem;
     flex-direction: column;
     border-radius: 10px;
     border: solid 3px #31A34A;
     margin-top: 1rem;
+    justify-content: center;
 }
 .uniName{
     display: flex;
     /* background-color: aqua; */
-    width: 40%;
+    width: 55%;
     justify-content: center;
     align-items: center;
     font-size: larger;
@@ -39,24 +40,18 @@
 .uniDeadline{
     display: flex;
     /* background-color: firebrick; */
-    width: 30%;
+    width: 45%;
     justify-content: center;
     align-items: center;
     font-size: larger;
     font-weight: bold;
 }
-.uniStatus{
-    display: flex;
-    /* background-color: indianred; */
-    width: 30%;
-    justify-content: center;
-    align-items: center;
-    
-}
+
 .uniSave{
     margin-top: 1rem;
     display: flex;
     justify-content: flex-end;
+    /* background-color: red; */
 }
 
 .uniGuide{
