--- a/client/src/components/teacher/screens/css/HomeComp.css
+++ b/client/src/components/teacher/screens/css/HomeComp.css
@@ -1,7 +1,83 @@
-.mainHome{
-    display: flex;
-    flex-direction: column;
-    background-color: rebeccapurple;
-    width: 100%;
-    height: 100%;
+.mainHome {
+  display: flex;
+  flex-direction: column;
+  /* background-color: white; */
+  width: 100%;
+  height: 100%;
+}
+.homeTitle {
+  display: flex;
+  width: 100%;
+  height: 3rem;
+  /* background-color: aqua; */
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+.homeTable {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  border-radius: 10px;
+  border: solid 3px #31a34a;
+}
+.tableContent {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: auto;
+  /* background-color: firebrick; */
+  padding: 1rem;
+  justify-content: center;
+  align-items: center;
+  margin-left: 2rem;
+}
+.tableHead {
+  display: flex;
+  height: 20%;
+  /* background-color: aqua; */
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: large;
+  padding: 0.5rem;
+  border-bottom: solid 2px black;
+}
+.tableItem {
+  display: flex;
+  height: 20%;
+  /* background-color: blue; */
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  padding: 0.5rem;
+  width: 60%;
+  font-weight: bold;
+}
+.homeGuide {
+  display: flex;
+  height: 3rem;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+}
+.homeDone {
+  background-color: #8be78b;
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
+}
+.homePending {
+  background-color: #fffdaf;
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
+  margin-left: 2rem;
 }
