--- a/client/src/components/student/screens/css/UniversityComp.css
+++ b/client/src/components/student/screens/css/UniversityComp.css
@@ -1,4 +1,4 @@
-.uniMain {
+.uniMains {
   display: flex;
   flex-direction: column;
   /* background-color: rebeccapurple; */
@@ -6,6 +6,10 @@
   height: 100%;
   align-items: center;
   justify-content: center;
+  border: solid 3px #ffbcbc;
+  border-radius: 10px;
+
+
 }
 .uniTable {
   background-color: white;
