--- a/client/src/components/common/common.css
+++ b/client/src/components/common/common.css
@@ -1,4 +1,30 @@
 .main {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+}
+/* navbar  */
+.navbar {
+  display: flex;
+  width: 100%;
+  height: 10%;
+  background-color: #1976d2;
+}
+.mainDiv {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 50%;
+  /* background-color: red; */
+  justify-content: flex-start;
+  align-items: center;
+  align-self: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .main {
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -16,9 +42,11 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 50%;
+    width: 100%;
     /* background-color: red; */
     justify-content: flex-start;
     align-items: center;
     align-self: center;
   }
+}
+
