--- a/client/src/components/mainScreen.css
+++ b/client/src/components/mainScreen.css
@@ -13,7 +13,7 @@
   background-color: #1976d2;
 }
 
-.mainDiv {
+.mainDivm {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -40,7 +40,7 @@
   /* background-color: aqua; */
 }
 .card {
-  color: #F5F5F5;
+  color: #f5f5f5;
   display: flex;
   flex-direction: column;
   /* background-color: #F5F5F5; */
@@ -49,7 +49,69 @@
   margin-left: 2.5rem;
   margin-right: 2.5rem;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.6);
-  -webkit-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.6);
-  -moz-box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.6);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
+}
+
+@media only screen and (max-width: 600px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+  }
+  /* navbar  */
+  .navbar {
+    display: flex;
+    width: 100%;
+    height: 10%;
+    background-color: #1976d2;
+  }
+
+  .mainDivm {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    /* background-color: red; */
+    justify-content: flex-start;
+    align-items: center;
+    align-self: center;
+  }
+  .mainText {
+    display: flex;
+    height: 20%;
+    width: 100%;
+    /* background-color: goldenrod; */
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: xx-large;
+  }
+  .cardArea {
+    display: flex;
+    height: 80%;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1rem;
+  }
+  .card {
+    color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    /* background-color: #F5F5F5; */
+    height: 60%;
+    width: 50%;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+    margin-top: 1rem;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
+    -webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
+  }
 }
