--- a/client/src/components/student/screens/css/HomeComp.css
+++ b/client/src/components/student/screens/css/HomeComp.css
@@ -81,4 +81,16 @@
     margin-right: 1rem;
     margin-left: 2rem;
   }
-  
+  @media only screen and (max-width: 600px) {
+  .homeTitle{
+    display: flex;
+    width: 100%;
+    height: auto !important;
+    flex-direction: column !important;
+    /* background-color: aqua; */
+    justify-content: center;
+    align-items: flex-start !important;
+    font-weight: bold;
+    font-size: 1.3rem;
+  }
+  }
