--- a/client/src/components/student/screens/css/UniversityComp.css
+++ b/client/src/components/student/screens/css/UniversityComp.css
@@ -8,8 +8,6 @@
   justify-content: center;
   border: solid 3px #ffbcbc;
   border-radius: 10px;
-
-
 }
 .uniTable {
   background-color: white;
@@ -85,4 +83,57 @@
   justify-content: center;
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+@media only screen and (max-width: 600px) {
+  .uniMains {
+    display: flex;
+    flex-direction: column;
+    /* background-color: rebeccapurple; */
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    border: solid 3px #ffbcbc;
+    border-radius: 10px;
+  }
+  .uniTable {
+    background-color: white;
+    width: 95% !important;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    border: solid 3px #ffbcbc;
+    border-radius: 10px;
+  }
+  .uniHead {
+    display: flex;
+    width: 100%;
+    height: 4rem;
+    /* background-color: blueviolet; */
+    border-bottom: solid black 2px;
+  }
+  .uniNameT {
+    width: 50%;
+    height: 100%;
+    /* background-color: azure; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: large;
+    font-weight: bold;
+  }
+  .uniDeadlineT {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+    /* background-color: saddlebrown; */
+    font-size: large;
+    font-weight: bold;
+  }
+  
+ 
+  
 }
