--- a/client/src/components/teacher/screens/css/RequestComp.css
+++ b/client/src/components/teacher/screens/css/RequestComp.css
@@ -1,34 +1,83 @@
-.reqMain{
+.reqMain {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  align-items: center;
+  border: solid 3px #31a34a;
+  border-radius: 10px;
+}
+.reqHead {
+  height: 5rem;
+  width: 50%;
+  /* background-color: #8BE78B; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: x-large;
+  font-weight: bold;
+}
+.reqCard {
+  width: 60%;
+  height: 5rem;
+  background-color: #8be78b;
+  display: flex;
+  border: solid 3px #31a34a;
+  border-radius: 10px;
+  margin-bottom: 1.5rem;
+}
+.cardLeft {
+  height: 100%;
+  width: 50%;
+  /* background-color: #31A34A; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+.cardRight {
+  height: 100%;
+  width: 50%;
+  /* background-color: firebrick; */
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+@media only screen and (max-width: 600px) {
+  .reqMain {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
     background-color: white;
     align-items: center;
-    border: solid 3px #31A34A;
+    border: solid 3px #31a34a;
     border-radius: 10px;
-    
-}
-.reqHead{
+  }
+  .reqHead {
     height: 5rem;
-    width: 50%;
+    width: 100%;
     /* background-color: #8BE78B; */
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: x-large;
     font-weight: bold;
-}
-.reqCard{
-    width: 60%;
-    height: 5rem;
-    background-color: #8BE78B;
+  }
+  .reqCard {
+    width: 95%;
+    height: auto;
+    background-color: #8be78b;
     display: flex;
-    border: solid 3px #31A34A;
+    border: solid 3px #31a34a;
     border-radius: 10px;
     margin-bottom: 1.5rem;
-}
-.cardLeft{
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+  }
+  .cardLeft {
     height: 100%;
     width: 50%;
     /* background-color: #31A34A; */
@@ -37,12 +86,17 @@
     align-items: center;
     font-size: 1.3rem;
     font-weight: bold;
-}
-.cardRight{
+  }
+  .cardRight {
     height: 100%;
     width: 50%;
     /* background-color: firebrick; */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-direction: column;
+  }
+  .reqAccept{
+    margin-bottom: 0.5rem;
+  }
 }
