--- a/client/src/components/teacher/screens/css/StudentComp.css
+++ b/client/src/components/teacher/screens/css/StudentComp.css
@@ -47,3 +47,13 @@
   font-weight: bold;
   font-size: 1.2rem;
 }
+
+@media only screen and (max-width: 600px) {
+  
+  .studContent {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    /* background-color: blue; */
+  }
+}
