--- a/client/src/components/teacher/screens/css/StudentUniListScreen.css
+++ b/client/src/components/teacher/screens/css/StudentUniListScreen.css
@@ -1,14 +1,94 @@
-.uniMain{
+.uniMain {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border-radius: 10px;
+  border: solid 3px #31a34a;
+  align-items: center;
+  padding-top: 1rem;
+}
+.uniTitle {
+  /* background-color: aqua; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: x-large;
+  font-weight: bold;
+}
+.uniCard {
+  background-color: #f9f9f9;
+  width: 45%;
+  height: auto;
+  display: flex;
+  padding: 1rem;
+  flex-direction: column;
+  border-radius: 10px;
+  border: solid 3px #31a34a;
+  margin-top: 1rem;
+  justify-content: center;
+}
+.uniName {
+  display: flex;
+  /* background-color: aqua; */
+  width: 55%;
+  justify-content: center;
+  align-items: center;
+  font-size: larger;
+  font-weight: bold;
+}
+.uniDeadline {
+  display: flex;
+  /* background-color: firebrick; */
+  width: 45%;
+  justify-content: center;
+  align-items: center;
+  font-size: larger;
+  font-weight: bold;
+}
+
+.uniSave {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  /* background-color: red; */
+}
+
+.uniGuide {
+  display: flex;
+  height: 3rem;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+}
+.done {
+  background-color: #8be78b;
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
+}
+.pending {
+  background-color: #fffdaf;
+  width: 2rem;
+  height: 2rem;
+  margin-right: 1rem;
+  margin-left: 2rem;
+}
+@media only screen and (max-width: 600px) {
+  .uniMain {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
     background-color: white;
     border-radius: 10px;
-    border: solid 3px #31A34A;
+    border: solid 3px #31a34a;
     align-items: center;
-}
-.uniTitle{
+  }
+  .uniTitle {
     /* background-color: aqua; */
     width: 100%;
     display: flex;
@@ -16,20 +96,20 @@
     align-items: center;
     font-size: x-large;
     font-weight: bold;
-}
-.uniCard{
-    background-color: #F9F9F9;
-    width: 45%;
-    height: 7rem;
+  }
+  .uniCard {
+    background-color: #f9f9f9;
+    width: 85%;
+    height: auto;
     display: flex;
     padding: 1rem;
     flex-direction: column;
     border-radius: 10px;
-    border: solid 3px #31A34A;
+    border: solid 3px #31a34a;
     margin-top: 1rem;
     justify-content: center;
-}
-.uniName{
+  }
+  .uniName {
     display: flex;
     /* background-color: aqua; */
     width: 55%;
@@ -37,8 +117,8 @@
     align-items: center;
     font-size: larger;
     font-weight: bold;
-}
-.uniDeadline{
+  }
+  .uniDeadline {
     display: flex;
     /* background-color: firebrick; */
     width: 45%;
@@ -46,33 +126,34 @@
     align-items: center;
     font-size: larger;
     font-weight: bold;
-}
+  }
 
-.uniSave{
+  .uniSave {
     margin-top: 1rem;
     display: flex;
     justify-content: flex-end;
     /* background-color: red; */
-}
+  }
 
-.uniGuide{
+  .uniGuide {
     display: flex;
     height: 3rem;
     width: 50%;
     justify-content: center;
     align-items: center;
     font-weight: bold;
-}
-.done{
-    background-color: #8BE78B;
-    width: 2rem;
+  }
+  .done {
+    background-color: #8be78b;
+    width: 8rem;
     height: 2rem;
     margin-right: 1rem;
-}
-.pending{
-    background-color: #FFFDAF;
-    width: 2rem;
+  }
+  .pending {
+    background-color: #fffdaf;
+    width: 8rem;
     height: 2rem;
     margin-right: 1rem;
     margin-left: 2rem;
+  }
 }
