--- a/client/src/components/teacher/screens/css/TeacherProfile.css
+++ b/client/src/components/teacher/screens/css/TeacherProfile.css
@@ -1,22 +1,89 @@
-.profileMain{
+.profileMain {
+  display: flex;
+  flex-direction: column;
+  /* background-color: white; */
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.profileCard {
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+  height: 15rem;
+  width: 30rem;
+  border-radius: 10px;
+  border: solid 3px #31a34a;
+}
+.profileDiv {
+  display: flex;
+  flex-direction: column;
+  /* background-color:#FFBCBC; */
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  /* color: white; */
+}
+.dialogBoxt{
+  width: 30rem;
+}
+
+.profileTitle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 2rem;
+  /* background-color: blue; */
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  width: 100%;
+  height: 15%;
+}
+.proifleKey {
+}
+.profileVal {
+  display: flex;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+
+.profileEdit {
+  display: flex;
+  /* background-color: antiquewhite; */
+  margin-top: 0.5rem;
+  width: 30rem;
+  height: 3rem;
+  justify-content: flex-end;
+  align-items: center;
+}
+.editBtn {
+  height: 80%;
+  width: 5rem;
+  background-color: white;
+}
+@media only screen and (max-width: 600px) {
+  .profileMain {
     display: flex;
     flex-direction: column;
     /* background-color: white; */
     width: 100%;
-    height: 100%;
+    height: auto;
     justify-content: center;
     align-items: center;
-}
-.profileCard{
+  }
+  .profileCard {
     display: flex;
     flex-direction: row;
     background-color: white;
     height: 15rem;
-    width: 30rem;
+    width: 100%;
     border-radius: 10px;
-    border: solid 3px  #31A34A;
-}
-.profileDiv{
+    border: solid 3px #31a34a;
+    justify-content: center;
+    align-items: center;
+  }
+  .profileDiv {
     display: flex;
     flex-direction: column;
     /* background-color:#FFBCBC; */
@@ -24,9 +91,9 @@
     width: 100%;
     height: 100%;
     /* color: white; */
-}
+  }
 
-.profileTitle{
+  .profileTitle {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,43 +103,30 @@
     margin-bottom: 0.5rem;
     width: 100%;
     height: 15%;
-}
-.proifleKey{
-
-}
-.profileVal{
+  }
+  .proifleKey {
+  }
+  .profileVal {
     display: flex;
     font-weight: bold;
-    font-size: 1.2rem;    
-}
+    font-size: 1.2rem;
+  }
 
-
-
-.profileEdit{
+  .profileEdit {
     display: flex;
     /* background-color: antiquewhite; */
     margin-top: 0.5rem;
-    width: 30rem;
+    width: 100%;
     height: 3rem;
     justify-content: flex-end;
     align-items: center;
+  }
+  .dialogBoxt{
+    width: 20rem;
 }
-.editBtn{
+  .editBtn {
     height: 80%;
     width: 5rem;
     background-color: white;
-}
-@media only screen and (max-width: 600px) {
-    .profileMain{
-        width: 100%;
-    }
-    .profileCard{
-        width: 20rem;
-    }
-    .profileEdit{
-
-    }
-    .editBtn{
-
-    }
   }
+}
